CDSandJFR: assert(instance_klass->is_initialized())

XMLWordPrintable

    • jfr
    • b08
    • Verified


      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (open/src/hotspot/share/jfr/jni/jfrJavaSupport.cpp:775), pid=3374, tid=3377
      # assert(instance_klass->is_initialized()) failed: inavarient
      #
      # JRE version: Java(TM) SE Runtime Environment (15.0+8) (fastdebug build 15-ea+8-198)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-ea+8-198, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xc9af09] JfrJavaSupport::get_handler(_jobject*, Thread*)+0xf9
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/fcf4c0c4-d73e-4321-860c-6613427db92b-S1790/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/df57f581-959e-4b13-95da-f9875b27beed/runs/f8e7d6ab-e2db-43fc-b741-1955d4737bdc/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/core.3374)
      #
      # An error report file with more information is saved as:
      # /opt/mach5/mesos/work_dir/slaves/fcf4c0c4-d73e-4321-860c-6613427db92b-S1790/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/df57f581-959e-4b13-95da-f9875b27beed/runs/f8e7d6ab-e2db-43fc-b741-1955d4737bdc/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/hs_err_pid3374.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #
      Current thread is 3377
      Dumping core ...
      ];
       stderr: [java version "15-ea" 2020-09-15
      Java(TM) SE Runtime Environment (fastdebug build 15-ea+8-198)
      Java HotSpot(TM) 64-Bit Server VM (fastdebug build 15-ea+8-198, mixed mode, sharing)
      ]
       exitValue = 134

      java.lang.RuntimeException: Hotspot crashed
      at jdk.test.lib.cds.CDSTestUtils.checkCommonExecExceptions(CDSTestUtils.java:313)
      at jdk.test.lib.cds.CDSTestUtils.checkExec(CDSTestUtils.java:452)
      at jdk.test.lib.cds.CDSTestUtils.checkExec(CDSTestUtils.java:439)
      at CDSandJFR.test(CDSandJFR.java:70)
      at CDSandJFR.main(CDSandJFR.java:56)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:564)
      at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
      at java.base/java.lang.Thread.run(Thread.java:832)

      Caused by JDK-8227610

            Assignee:
            Erik Gahlin
            Reporter:
            Erik Gahlin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: