8237887: CDSandJFR: assert(instance_klass->is_initialized()

Reviewed-by: mgronlun