src/hotspot/share/jfr/jni/jfrJavaSupport.hpp
@@ -95,8 +95,8 @@ class JfrJavaSupport : public AllStatic {
   static bool is_excluded(jobject thread);
   static void on_thread_start(Thread* t);
 
-  static jobject get_handler(jobject clazz, Thread* thread);
-  static bool set_handler(jobject clazz, jobject handler, Thread* thread);
+  static jobject get_handler(jobject clazz, TRAPS);
+  static bool set_handler(jobject clazz, jobject handler, TRAPS);
 
   // critical
   static void abort(jstring errorMsg, TRAPS);
